<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <EditText
        android:id="@+id/edtxtSearch"
        android:layout_width="369dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="387dp"
        android:autofillHints=""
        android:backgroundTint="#2B2B2B"
        android:drawableTint="#FFFFFF"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/edtxtSearch"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintBottom_toTopOf="@+id/btnIdList"
        app:layout_constraintEnd_toStartOf="@+id/imgBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="370dp"
        android:layout_height="52dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="555dp"
        android:onClick="OnClickSearch"
        android:text="@string/btnSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtSearch" />

    <Button
        android:id="@+id/btnIdList"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:onClick="OnClickIdList"
        android:text="@string/btnIdList"
        app:layout_constraintBottom_toTopOf="@+id/btnLoja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtSearch" />

    <Button
        android:id="@+id/btnLoja"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginBottom="78dp"
        android:onClick="OnClickLoja"
        android:text="@string/btnLoja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIdList" />

</androidx.constraintlayout.widget.ConstraintLayout>